# bayesopt4ros

./: .buildinfo  .flake8  .gitignore  .readthedocs.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  api_documentation.html  docker-compose.yaml  examples.html  genindex.html  getting_started.html  index.html  introduction.html  make_source.sh  objects.inv  package.xml  py-modindex.html  requirements.txt  search.html  searchindex.js  visualize.py
.circleci/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: bayesopt4ros.yml  continous_integration.yml  continuous_integration.yml  documentation_deployment.yml  pages_deployment.yml
_modules/: bayesopt_server.html  contextual_bayesopt_server.html  index.html  test_client_contextual_python.html  test_client_python.html
_modules/bayesopt4ros/: bayesopt.html  contextual_bayesopt.html  data_handler.html  util.html
_sources/: introduction.rst.txt
action/: BayesOpt.action  BayesOptState.action  ContextBayesOpt.action  ContextualBayesOptState.action
docs/: .buildinfo  Makefile  api_documentation.rst  conf.py  examples.rst  genindex.html  getting_started.rst  index.html  index.rst  introduction.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_modules/: bayesopt_server.html  bayesopt_service.html  index.html
docs/_modules/bayesopt4ros/: acq_func.html  bayesopt.html  optim.html
docs/_sources/: index.rst.txt
docsource/: Makefile  conf.py  index.rst
docsource/_build/doctrees/: environment.pickle  index.doctree
docsource/_build/html/_sources/: index.rst.txt
docsrc/: Makefile  conf.py  index.rst
launch/: bayesopt.launch  bayesopt_server.launch  bayesopt_service.launch  contextual_bayesopt.launch
nodes/: bayesopt_node.py  bayesopt_server.py  bayesopt_service.py  contextual_bayesopt_node.py  contextual_bayesopt_server.py
src/: visualize.py
src/bayesopt4ros/: CMakeLists.txt  __init__.py  acq_func.py  bayesopt.py  bayesopt_server.py  contextual_bayesopt.py  contextual_bayesopt_server.py  data_handler.py  optim.py  package.xml  setup.py  test_objectives.py  util.py
src/bayesopt4ros/configs/: example_config_forrrester.yaml
src/bayesopt4ros/example_clients/: example_client_cpp.cpp  example_client_python.py
src/bayesopt4ros/launch/: bayesopt_service.launch
src/bayesopt4ros/nodes/: bayesopt_service.py  test_client.py
src/bayesopt4ros/settings/: example_settings.yaml
src/bayesopt4ros/src/bayesopt/: acq_func.py  bayesopt.py  objectives.py  util.py
src/bayesopt4ros/src/bayesopt4ros/: bayesopt.py  optim.py  util.py
src/bayesopt4ros/srv/: BayesOptSrv.srv
src/bayesopt4ros/test/: test_client_python.test
src/bayesopt4ros/test/integration/: test_client_cpp.cpp  test_client_cpp.test  test_client_python.py  test_client_python.test
test/integration/: test_client_contextual_python.py  test_client_contextual_python.test  test_client_cpp.cpp  test_client_cpp.test  test_client_python.py  test_client_python.test
test/integration/configs/: contextual_forrester_ucb.yaml  forrester_ei.yaml  forrester_ucb.yaml  neg_forrester_ucb.yaml  noisy_forrester_ucb.yaml  three_hump_camel_ei.yaml  three_hump_camel_ucb.yaml
test/unit/: test_acq.py  test_optim.py  test_util.py
test/unit/data/: test_data_1d_0.yaml  test_data_2d_0.yaml
